<resources>
    <string name="app_name">Ayuda</string>
    <string name="introduce_tu_email">Introduce tu email</string>
    <string name="introduce_tu_pass">Introduce tu contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="tv_buscar">Buscar</string>
    <string name="tv_donar">Donar</string>
    <string name="tv_info">Información</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_crear_nuevo_usuario">Crear nuevo usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="direcci_n">Dirección</string>
    <string name="email">Email</string>
    <string name="tel_fono">Teléfono</string>
    <string name="aceptar">Aceptar</string>
    <string name="tv_electrodomesticos">Electrodomésticos</string>
    <string name="tv_ropa">Ropa</string>
    <string name="tv_muebles">Muebles</string>
    <string name="tv_comida">Comida</string>
    <string name="title_favorites_fragment">Favoritos</string>
    <string name="title_upload_fragment">Subir</string>
    <string name="title_perfil_fragment">Perfil</string>
    <string name="text_label_settings">Settings</string>
    <string name="text_label_favorites">Favoritos</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_add">Subir</string>
    <string name="text_label_perfil">Perfil</string>
    <string name="title_busquedas_fragment">Buscar</string>
    <string name="description_img_photo">Descripción del artículo</string>
    <string name="hint_description">Describe el artículo</string>
    <string name="message_write_database_success">Articulo subido correcctamente.</string>
    <string name="message_delete_database_success">Articulo eliminado correctamente.</string>
    <string name="message_delete_database_error">Error al eliminar el artículo.</string>
    <string name="message_write_database_error">Error al escribir en la base de datos.</string>
    <string name="validation_field_required">Campo requerido</string>
    <string name="hint_title">Título</string>
    <string name="text_btn_subir">Subir</string>
    <string name="error_upload_article">No se ha encontrado ningún articulo</string>
    <string name="dialog_title">¿Eliminar nota?</string>
    <string name="dialog_ok">Eliminar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="title_info_no_fav">No tienes ningún artículo en favoritos.</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_pass">Contraseña</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_surname">Apellidos</string>
    <string name="tv_valuntariado">Voluntariado</string>
    <string name="tv_bebes">Bebés</string>
    <string name="hint_category">Categoría</string>
    <string name="text_notifications">Notificaciones</string>
    <string name="text_mis_productos">Mis productos</string>
    <string name="text_eliminar_usuario">Eliminar usuario</string>
    <string name="text_cerrar_sesion">Cerrar sesión</string>
    <string name="text_delete_user_ok">El usuario se ha borrado correctamente</string>
    <string name="text_delete_user_error">Error al borrar el usuario</string>
</resources>