<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/settingsFragment"
        android:enabled="true"
        android:title="@string/text_label_settings"
        android:icon="@drawable/ic_settings"/>

    <item android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:title="@string/text_label_favorites"
        android:icon="@drawable/ic_favorite"/>

    <item android:id="@+id/busquedasFragment"
        android:enabled="true"
        android:title="@string/text_label_home"
        android:icon="@drawable/ic_home"/>

    <item android:id="@+id/categoriasDonarFragment"
        android:enabled="true"
        android:title="@string/text_label_add"
        android:icon="@drawable/ic_add_circle"/>

    <item android:id="@+id/perfilFragment"
        android:enabled="true"
        android:title="@string/text_label_perfil"
        android:icon="@drawable/ic_person"/>
</menu>