<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background_app"
    tools:context=".PerfilFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="160dp"
            android:layout_height="160dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="128dp"
                app:cardElevation="0dp">
                <ImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tvTitleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name"
            android:layout_marginVertical="@dimen/common_padding_default"/>
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitleSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_surname"
            android:layout_marginVertical="@dimen/common_padding_default"/>
        <TextView
            android:id="@+id/tvSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitleAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_address"
            android:layout_marginVertical="@dimen/common_padding_default"/>
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitlePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone"
            android:layout_marginVertical="@dimen/common_padding_default"/>
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"
            android:layout_marginVertical="@dimen/common_padding_default"/>
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnIrEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Editar"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textStyle="bold"
            app:cornerRadius='30sp'
            android:padding="16dp"/>


    </LinearLayout>

</ScrollView>