<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_app"
    tools:context=".SettingsFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_logo"
        android:layout_marginHorizontal="138dp"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/tvNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_notifications"
        android:textSize="@dimen/common_padding_default"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:drawableStart="@drawable/ic_notifications"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <TextView
        android:id="@+id/tvYourProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_mis_productos"
        android:textSize="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_notes"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <TextView
        android:id="@+id/tvDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_eliminar_usuario"
        android:textSize="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_delete"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <TextView
        android:id="@+id/tvSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cerrar_sesion"
        android:textSize="@dimen/common_padding_default"
        android:drawableStart="@drawable/ic_sign_out"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>

</LinearLayout>