<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewUserFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:background="@color/background_app"
    android:fillViewport="true"><!-- IMPORTANTE -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".NewUserFragment">

        <TextView
            android:id="@+id/texoBienvenida"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/title_crear_nuevo_usuario"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/blue_200"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            app:layout_constraintBottom_toTopOf="@id/tiNombreReal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiNombreReal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_account"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/tiApellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texoBienvenida">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreReal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiApellidos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/apellidos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_account"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/tiDireccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiNombreReal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDireccion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/direcci_n"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_home"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/tiEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiApellidos">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/tiTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiDireccion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiTelefono"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/tel_fono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_phone"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/tiPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPass"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/introduce_tu_pass"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_candado"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="50dp"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintBottom_toTopOf="@+id/btAceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiTelefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130dp"
            android:textColor="@color/white"
            android:padding="18dp"
            android:text="@string/aceptar"
            android:textStyle="bold"
            app:cornerRadius='30sp'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPass" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>