<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasDonarFragment"
    android:orientation="vertical"
    android:background="@color/background_app"
    android:padding="@dimen/common_padding_default">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fastfood"
        android:layout_marginTop="15dp"
        android:layout_marginStart="80dp"/>
    <TextView
        android:id="@+id/tvComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_comida"
        android:layout_marginVertical="@dimen/common_padding_default"
        android:textAlignment="center"
        android:textColor="@color/blue_200"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textSize="32sp"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_table"
            android:layout_marginTop="15dp"
            android:layout_marginStart="80dp"/>
        <TextView
            android:id="@+id/tvMuebles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_muebles"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_ropa"
            android:layout_marginTop="15dp"
            android:layout_marginStart="80dp"/>
        <TextView
            android:id="@+id/tvRopa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_ropa"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_electrodomesticos"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/tvElectrodomesticos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_electrodomesticos"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_voluntario"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"/>
        <TextView
            android:id="@+id/tvVoluntariado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_valuntariado"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_chupete"
            android:layout_marginTop="15dp"
            android:layout_marginStart="90dp"/>
        <TextView
            android:id="@+id/tvBebes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bebes"
            android:layout_marginVertical="@dimen/common_padding_default"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textSize="32sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
</LinearLayout>