<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_app"
    tools:context=".PrincipalHomeFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"/>
    <TextView
        android:id="@+id/tvBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_buscar"
        android:gravity="center"
        android:layout_marginVertical="50dp"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textIsSelectable="true"
        android:textAppearance="?attr/textAppearanceHeadline4" />
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="@color/deep_purple_200"
    android:layout_marginHorizontal="@dimen/common_padding_default"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_transfer"
        android:layout_marginTop="50dp"
        android:layout_marginStart="110dp"/>
    <TextView
        android:id="@+id/tvDonar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_donar"
        android:layout_marginVertical="50dp"
        android:textStyle="bold"
        android:textColor="@color/blue_200"
        android:layout_marginStart="@dimen/common_padding_default"
        android:textAppearance="?attr/textAppearanceHeadline4"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:layout_marginTop="50dp"
            android:layout_marginStart="80dp"/>
        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_info"
            android:layout_marginVertical="50dp"
            android:textStyle="bold"
            android:textColor="@color/blue_200"
            android:layout_marginStart="@dimen/common_padding_default"
            android:textAppearance="?attr/textAppearanceHeadline4"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/deep_purple_200"
        android:layout_marginHorizontal="@dimen/common_padding_default"/>


</LinearLayout>